# End-TO-END-FraudDetectionML-Prod-MLOps-MLFlow-DVC

./: .env.example  .gitignore  README.md  dvc.yaml  health_check.sh  main.py  mlflow.db  params.yaml  pyproject.toml  restart.sh  start.sh  status.sh  stop.sh
.dvc/: config
backend/app/: config.py  database.py  main.py
data/interim/: firm_years_labeled.parquet.dvc  schema_validation_passed.txt
data/raw/: test.csv.dvc
docker/: docker-compose.yml  init.sql
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  PHASE_0_LEARNING.md  PHASE_1_LEARNING.md  PHASE_2_LEARNING.md  PHASE_3_LEARNING.md  PROGRESS.md
feature_repo/: feature_store.yaml  features.py
feature_repo/data/: online_store.db  registry.db
gx/: great_expectations.yml
gx/expectations/: .ge_store_backend_id  firm_years_labeled_suite.json
notebooks/: Data.ipynb
reports/: gx_validation_report.json
scripts/: extract_features.py  inspect_data.py  merge_data.py  monitor_features.py  validate_data_ge.py  validate_schema.py
