[project]
name = "fraud-detection-ml"
version = "0.1.0"
description = "Production-grade fraud detection system"
requires-python = ">=3.11"
dependencies = [
    # Core ML
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "imbalanced-learn>=0.11.0",
    # Backend
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.12.0",
    # MLOps
    "mlflow>=2.9.0",
    "dvc>=3.29.0",
    "dvc-s3>=3.0.0",
    "zenml>=0.50.0",
    # Feature Store
    "feast>=0.35.0",
    # Monitoring
    "prometheus-client>=0.18.0",
    "evidently>=0.4.7",
    # Frontend
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    # Code Quality
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "pathspec==0.11.2",
    "great-expectations>=1.6.4",
    "ydata-profiling>=4.18.1",
    "kaleido>=1.2.0",
    "spacy>=3.8.11",
    "textstat>=0.7.12",
    "pyarrow>=18.0.0",
    "openpyxl>=3.1.5",
    "en-core-web-sm",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.26.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
